re PR middle-end/35823 (verify_gimple fails on taking 'Size of a String subprogram parameter)

2008-04-04  Richard Guenther  <rguenther@suse.de>

	PR middle-end/35823
	* fold-const.c (optimize_minmax_comparison): Use the correct
	type for the constant in the simplified comparison.

	* gnat.dg/pr35823.adb: New testcase.

From-SVN: r133893