gcc/testsuite/gnat.dg/pr35823.adb
@@ -1,0 +1,6 @@
+procedure pr35823 (Arg : in String) is
+   Size : constant Natural := Arg'Size;
+begin
+   null;
+end pr35823;
+
